<resources>
    <string name="app_name">BookManager</string>
    <string name="enter_email">Enter Email....</string>
    <string name="enter_password">Enter Password…</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_back">Go back</string>
    <string name="settings">Settings</string>
    <string name="information">Information</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="password_label">Password:</string>
    <string name="email_label">Email:</string>
    <string name="weak_password">Weak Password</string>
    <string name="strong_password">Strong Password</string>
    <string name="product_name">Name:</string>
    <string name="enter_quantity">Enter Quantity…</string>
    <string name="quantity">Quantity:</string>
    <string name="unit_price">Unit Price(€):</string>
    <string name="enter_product_name">Enter Product Name…</string>
    <string name="enter_unit_price">Enter Unit Price…</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="view_shopping_list">View shopping list</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_banner_text">Checkout</string>
    <string name="total_value">Total Value:</string>
    <string name="number_of_items">Number of Items:</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="cancel_purchase">Cancel Purchase</string>
    <string name="payment_details">Payment Details</string>
    <string name="card_expiry_date">Expiry Date:</string>
    <string name="card_number">Number:</string>
    <string name="enter_card_number">XXXX-XXXX-XXXX-XXXX</string>
    <string name="enter_card_expiry_date">MM-YYYY</string>
    <string name="shopping_list_is_empty">Shopping list is empty!</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="full_name">Full Name:</string>
    <string name="enter_name">Enter Name...</string>
    <string name="enter_date_of_birth">Enter Date of Birth...</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="go_to_sign_up_page">Go To Sign Up Page</string>
    <string name="go_to_sign_in_page">Go to sign in page</string>
    <string name="submit">submit</string>
    <string name="preferences">Preferences</string>
    <string name="book_manager">Book Manager</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_name">User Name</string>
    <string name="all">All</string>
    <string name="category">Category</string>
    <string name="status">Status</string>
    <string name="displaying_all_books">Displaying all books</string>
    <string name="displaying_books_in_category">"Displaying books in category: "</string>
    <string name="displaying_books_with_status">"Displaying books with status: "</string>
    <string name="please_select_a_category">Please select a category</string>
    <string name="please_select_a_status">Please select a status</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter title...</string>
    <string name="home">Home</string>
    <string name="add_book">Add Book</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_preferences">Preferences</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_review">Enter review...</string>
    <string name="review">Review:</string>
    <string name="author">Author:</string>
    <string name="silent_mode">Silent Mode:</string>
    <string name="books_not_found">Books not found</string>
    <string-array name="category_options">
        <item>Fantasy</item>
        <item>Sci-fi</item>
        <item>Technology</item>
        <item>Life Style</item>
        <item>Romance</item>
    </string-array>
    <string-array name="category_status">
        <item>In progress</item>
        <item>Finished</item>
    </string-array>

</resources>