<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SignUpFragment">

    <TextView
        android:id="@+id/email_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/email_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/password_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/name_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/full_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/DOB_label"
        android:layout_width="102dp"
        android:layout_height="58dp"
        android:gravity="center"
        android:text="@string/date_of_birth"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        app:layout_constraintVertical_bias="0.261" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toEndOf="@+id/email_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />

    <EditText
        android:id="@+id/password_toggle"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toEndOf="@+id/password_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintVertical_bias="0.106" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="21dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toBottomOf="@+id/password_toggle"
        app:layout_constraintVertical_bias="0.047" />

    <EditText
        android:id="@+id/name_dob"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:hint="@string/dd_mm_yyyy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/DOB_label"
        app:layout_constraintTop_toBottomOf="@+id/name_edit"
        app:layout_constraintVertical_bias="0.189" />

</androidx.constraintlayout.widget.ConstraintLayout>