<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddBookActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/profile_tabs"
        android:layout_width="349dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="@color/dark_grey"
        app:tabMode="fixed" />


    <TextView
        android:id="@+id/name_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/full_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_name"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tabs"
        app:layout_constraintVertical_bias="0.069" />


    <TextView
        android:id="@+id/dob_label"
        android:layout_width="102dp"
        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/date_of_birth"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/validation"
        app:layout_constraintEnd_toStartOf="@+id/dob_edit"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/view_name"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tabs" />

    <TextView
        android:id="@+id/view_dob"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/dob_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_name"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_tabs" />

    <EditText
        android:id="@+id/dob_edit"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/mm_dd_yyyy"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_name" />

    <TextView
        android:id="@+id/validation"
        android:layout_width="200dp"
        android:layout_height="71dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text=""
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob_edit" />

    <Button
        android:id="@+id/update_profile"
        android:layout_width="109dp"
        android:layout_height="75dp"
        android:text="@string/update_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validation"
        android:visibility="invisible"
        app:layout_constraintVertical_bias="0.128" />

</androidx.constraintlayout.widget.ConstraintLayout>