<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdateBookActivity">

    <TextView
        android:id="@+id/update_book_label"
        android:layout_width="413dp"
        android:layout_height="64dp"
        android:background="@color/light_black"
        android:gravity="center"
        android:text="Update Book"
        android:textColor="@color/light_grey"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="Title: "
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/author_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.643" />

    <TextView
        android:id="@+id/author_label"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/author"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/review_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <TextView
        android:id="@+id/status_label"
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Status: "
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/review_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_label"
        app:layout_constraintVertical_bias="0.368" />

    <TextView
        android:id="@+id/review_label"
        android:layout_width="103dp"
        android:layout_height="29dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="300dp"
        android:gravity="center"
        android:text="@string/review"

        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/view_title"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginEnd="13dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/view_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/title_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <Spinner
        android:id="@+id/status_dropdown"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:textSize="18sp"
        android:entries="@array/category_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/status_label"
        app:layout_constraintTop_toBottomOf="@+id/view_author" />

    <TextView
        android:id="@+id/view_author"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="13dp"
        android:background="@color/light_grey"
        android:gravity="center"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/review_edit"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="292dp"
        android:background="@color/light_grey"
        android:hint="@string/enter_review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/review_label"
        app:layout_constraintTop_toBottomOf="@+id/status_dropdown"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/update_book"
        android:layout_width="109dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:text="Update Book"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_edit"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>